<resources>

    <string name="app_name">MediCare</string>
    <string name="back_navigation">Back</string>
    <string name="previous_week">Previous Week</string>
    <string name="next_week">Next Week</string>
    <string name="today_medications">Today\'s Medications</string>
    <string name="add_medication">Add Medication</string>

    <string-array name="days_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <string-array name="type_options">
        <item>Capsule</item>
        <item>Drop</item>
        <item>Table</item>
        <item>Syrup</item>
    </string-array>

</resources>